raffia/tests/error/at-rule/document/no-matchers.snap
---
source: raffia/tests/error.rs
---
error: expect token `<ident>`, but found `{`
  ┌─ no-matchers.css:1:11
  │
1 │ @document {}
  │           ^


